# ido

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md  idan.txt  quick_gramm.txt
docs/: arquitectura.md  diccionario.md  gramatica.md  metodologia.md  roadmap.md
ido/: README.md  __init__.py  morphology.py
scripts/: 001_create_schema.sql  README.md  analyze_word.py  import_idan.py  query_dict.py
tests/: __init__.py  test_morphology.py
